# kdgpu-examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  generate_shader_variants.rb
assets/shaders/: CMakeLists.txt
assets/shaders/01_simple_gltf/: CMakeLists.txt  simple_gltf.frag  simple_gltf.vert
assets/shaders/04_instancing/: CMakeLists.txt  instancing.vert
assets/shaders/05_materials/: CMakeLists.txt  materials.vert
assets/shaders/06_ffx_cacao/: CMakeLists.txt  convert_to_spirv_text.h  fullscreenquad.frag
assets/shaders/07_pbr_metallic_roughness/: CMakeLists.txt  pbr-metallic-roughness-variants.json  pbr_metallic_roughness.frag  pbr_metallic_roughness.vert
assets/shaders/compute_n_body/: CMakeLists.txt  particle_calculate.comp
assets/shaders/dma_buf_interop/: CMakeLists.txt
assets/shaders/slint/: CMakeLists.txt
assets/shaders/xr_drawing/: CMakeLists.txt  xr_drawing.frag  xr_drawing.vert
assets/shaders/xr_multiview_model_viewer/: CMakeLists.txt  materials-variants.json  materials-variants.json.example  materials.frag  materials.vert  solid.frag  solid.vert  texture.frag  texture.vert
lib/kdgpu_ext/GltfHolder/: CMakeLists.txt  gltf_holder.cpp  gltf_holder.h  gltf_holder_global.h
lib/kdgpu_ext/GltfHolder/buffer_view_helper/: buffer_view_helper.cpp  buffer_view_helper.h
lib/kdgpu_ext/GltfHolder/material/rendering/: gltf_materials_for_a_pass.h  gltf_render_pass_texture_bindings.h
lib/kdgpu_ext/GltfHolder/render_mesh_set/: buffer_and_offset.h  indexed_draw.h  mesh_primitives.h  primitive_data.h  render_mesh_set.h
lib/kdgpu_ext/GltfHolder/render_permutation/: gltf_render_permutation.h  gltf_render_permutations.h
lib/kdgpu_ext/GltfHolder/shader_specification/: gltf_shader_bind_group_set.h  gltf_shader_bind_group_type.h  gltf_shader_texture_channels.h  gltf_shader_vertex_input.h
lib/kdgpu_ext/GltfHolder/texture/: gltf_texture.cpp  gltf_texture.h
lib/kdgpu_ext/KDGpuGraphics/: CMakeLists.txt
lib/kdgpu_ext/KDGpuGraphics/src/: global_resources.h
lib/kdgpu_ext/KDGpuGraphics/src/camera/: camera.cpp  camera.h  camera_lens.cpp  camera_lens.h
lib/kdgpu_ext/KDGpuGraphics/src/render_target/: render_target.cpp  render_target.h
lib/kdgpu_ext/KDGpuGraphics/src/shader/: shader_base.h  shader_vertex_fragment.h
lib/kdgpu_ext/KDGpuGraphics/src/texture/: single_texture.cpp  single_texture.h  texture_set.cpp  texture_set.h
lib/kdgpu_ext/KDGpuGraphics/src/texture_target/: texture_target.cpp  texture_target.h  texture_usage.h
lib/kdgpu_ext/KDGpuGraphics/src/uniform/: uniform_buffer_object.h  uniform_buffer_object_multi.h
lib/kdgpu_ext/KDGpuGraphics/src/vertex_buffer_object/: vertex_buffer_object.h
src/: CMakeLists.txt
src/compositing/: CMakeLists.txt
src/compositing/gaussian_blur/: CMakeLists.txt  readme.md
src/compositing/gaussian_blur/src/: engine_layer.cpp  engine_layer.h  main.cpp
src/compute_n_body/: CMakeLists.txt  compute_n_body.cpp  compute_n_body.h  main.cpp
src/dma_buf_interop/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
src/ffmpeg_video/: CMakeLists.txt
src/ffmpeg_video/assets/: CMakeLists.txt
src/ffmpeg_video/assets/shaders/: CMakeLists.txt  textured_quad.frag  textured_quad.vert
src/ffmpeg_video/assets/video/: CMakeLists.txt
src/ffmpeg_video/cmake/: ffmpeg.cmake
src/ffmpeg_video/src/: main.cpp  video_decoder.cpp  video_decoder.h  video_renderer.cpp  video_renderer.h
src/gltf/: CMakeLists.txt
src/gltf/gltf_render_albedo/: CMakeLists.txt
src/gltf/gltf_render_albedo/src/: engine_layer.cpp  engine_layer.h  main.cpp
src/gltf/gltf_render_pbr/: CMakeLists.txt
src/gltf/gltf_render_pbr/data/area_light_floor/: test_area_light.gltf
src/gltf/gltf_render_pbr/data/pbr/: lut_ggx.ktx2
src/gltf/gltf_render_pbr/src/: engine_layer.cpp  engine_layer.h  main.cpp
src/gltf_renderer/: CMakeLists.txt
src/gltf_renderer/01_simple_gltf/: CMakeLists.txt  main.cpp  simple_gltf.cpp  simple_gltf.h
src/gltf_renderer/02_buffer_layouts/: CMakeLists.txt  buffer_layouts.cpp  buffer_layouts.h  main.cpp
src/gltf_renderer/03_pipeline_caching/: CMakeLists.txt  main.cpp  pipeline_caching.cpp  pipeline_caching.h
src/gltf_renderer/04_instancing/: CMakeLists.txt  instancing.cpp  instancing.h  main.cpp  pipeline_key.h
src/gltf_renderer/04a_instancing/: CMakeLists.txt  instancing.cpp  instancing.h  main.cpp  pipeline_key.h  primitive_key.h
src/gltf_renderer/05_materials/: CMakeLists.txt  main.cpp  materials.cpp  materials.h
src/gltf_renderer/05a_materials/: CMakeLists.txt  materials.cpp  materials.h
src/gltf_renderer/06_ffx_cacao/: CMakeLists.txt  ffx_cacao.cpp  ffx_cacao.h  main.cpp  materials.cpp  materials.h  pipeline_key.h  primitive_key.h
src/gltf_renderer/07_pbr_metallic_roughness/: CMakeLists.txt  main.cpp  pbr_metallic_roughness.cpp  pbr_metallic_roughness.h  pipeline_key.h
src/gltf_renderer/tinygltf_helper/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_controller_layer.cpp  camera_controller_layer.h  camera_lens.cpp  camera_lens.h  tinygltf_helper.cpp  tinygltf_helper.h
src/slint/: CMakeLists.txt  app-window.slint  gl_extensions.cpp  gl_extensions.h  main.cpp  renderer.cpp  renderer.h
src/utility/: CMakeLists.txt  example_utility.h
src/xr/: CMakeLists.txt
src/xr/xr_drawing/: CMakeLists.txt  drawing_model.cpp  drawing_model.h  geometric_primitives.cpp  geometric_primitives.h  imgui_keyboard.cpp  imgui_keyboard.h  main.cpp  xr_drawing.cpp  xr_drawing.h  xr_drawing_scene.cpp  xr_drawing_scene.h
src/xr/xr_drawing/android/: CMakeLists.txt  settings.gradle.kts
src/xr/xr_drawing/android/app/: build.gradle.kts
src/xr/xr_multiview_model_viewer/: CMakeLists.txt  main.cpp  model_scene.cpp  model_scene.h  pipeline_key.h  primitive_key.h  xr_engine_layer.cpp  xr_engine_layer.h
src/xr/xr_multiview_model_viewer/android/: CMakeLists.txt  settings.gradle.kts
src/xr/xr_multiview_model_viewer/android/app/: build.gradle.kts
src/xr/xr_multiview_model_viewer/android/tinygltf_helper/: camera.h  camera_controller_layer.cpp  camera_controller_layer.h  (+2 more)
(+108 files in other folders)
