# This file is part of KDGpu Examples.
#
# SPDX-FileCopyrightText: 2023 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
#
# SPDX-License-Identifier: MIT
#
# Contact KDAB at <info@kdab.com> for commercial licensing options.
#
add_subdirectory(01_simple_gltf)
add_subdirectory(02_buffer_layouts)
add_subdirectory(03_pipeline_caching)
add_subdirectory(04_instancing)
add_subdirectory(04a_instancing)
add_subdirectory(05_materials)
add_subdirectory(05a_materials)
add_subdirectory(06_ffx_cacao)
add_subdirectory(07_pbr_metallic_roughness)
