# This file is part of KDGpu Examples.
#
# SPDX-FileCopyrightText: 2023 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
#
# SPDX-License-Identifier: MIT
#
# Contact KDAB at <info@kdab.com> for commercial licensing options.
#
add_library(ExampleUtility INTERFACE)
target_include_directories(ExampleUtility INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})